@@ -9,15 +9,13 @@ import FixedPoint
 
 if __name__ == "__main__":
     # basic demonstration of roots & exponents at various accuracies:
-    resolution = 6
-    while resolution <= 384:
-        print '=== ' + str(resolution) + 'bits ==='
-        FixedPoint.FPnum.SetFraction(resolution)
+    for resolution in [8, 32, 80, 274]:
+        family = FixedPoint.FPfamily(resolution)
         val = 2
-        rt = FixedPoint.FPnum(val).sqrt()
+
+        print '=== ' + str(resolution) + 'bits ==='
+        rt = FixedPoint.FPnum(val, family).sqrt()
         print 'sqrt(' + str(val) + ')~ ' + str(rt)
         print 'sqrt(' +str(val) + ')^2 ~ ' + str(rt * rt)
-        print 'exp(1) = ', FixedPoint.FPnum(1).exp()
+        print 'exp(1) = ', FixedPoint.FPnum(1, family).exp()
         print
-
-        resolution *= 4
